--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ hs_err_pid*
 .gradle/7.5/checksums/md5-checksums.bin
 src/main/resources/application-dev.properties
 /build/
+/src/main/resources/application-dev.yaml
