--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,14 @@ jobs:
       with:
         java-version: '17'
         distribution: 'adopt'
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Generate Gradle Wrapper
-      run: ./gradlew wrapper
-    - name: Gradle Wrapper Validation
-      uses: gradle/wrapper-validation-action@v1.0.4
-    - name: Run tests with Gradle
-      run: ./gradlew test
+    - name: Setup and execute Gradle 'test' task
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: test
+    - name: Build docker image with gradle bootBuildImage
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: gradle bootBuildImage -imageName $IMAGE_NAME
     - name: Login to Y.Cloud Container Registry
       env: 
           REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN }}
