--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
+	implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.1.0'
 
 
 	compileOnly 'org.projectlombok:lombok'
